[workspace]
members = [
  "crates/openclaw-core",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
authors = ["OpenClaw Contributors"]
license = "MIT"

[workspace.dependencies]
napi = { version = "2", features = ["napi4", "async"] }
napi-derive = "2"
napi-build = "2"
tokio = { version = "1", features = ["full"] }
lru = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
